--- a/Blog.Web/Pages/Shared/_Layout.cshtml
+++ b/Blog.Web/Pages/Shared/_Layout.cshtml
@@ -9,29 +9,7 @@
 </head>
 <body class="bg-white">
 
-<nav class="sticky top-0 z-10 bg-white backdrop-filter backdrop-blur-lg bg-opacity-30">
-    <div class="max-w-5xl mx-auto px-4">
-        <div class="flex items-center justify-between h-12">
-            <div class="text-xl text-gray-900 font-medium">DOMAIN</div>
-            <div class="flex gap-8 text-gray-900 text-xs">
-                <button type="button" class="flex items-center justify-between gap-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
-                        <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
-                    </svg>
-                    Search DOMAIN
-                </button>
-                <button type="button" class="flex items-center justify-between gap-1">
-                    Popular Topics
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
-                    </svg>
-
-
-                </button>
-            </div>
-        </div>
-    </div>
-</nav>
+@await Component.InvokeAsync("Nav")
 
 <div class="container">
     <main role="main" class="pb-3">
